added favicon and some other minor improvements

--- a/src/output.css
+++ b/src/output.css
@@ -524,10 +524,6 @@ Ensure the default browser behavior of the `hidden` attribute.
   margin-top: 1rem;
 }
 
-.ml-\[48\%\] {
-  margin-left: 48%;
-}
-
 .flex {
   display: flex;
 }
@@ -695,6 +691,10 @@ Ensure the default browser behavior of the `hidden` attribute.
 
 .overflow-x-hidden {
   overflow-x: hidden;
+}
+
+.scroll-smooth {
+  scroll-behavior: smooth;
 }
 
 .rounded-xl {
